--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unit-testing-react",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "module": "dist/index.umd.js",
   "main": "dist/index.umd.js",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.19.3",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@formatjs/ts-transformer": "^3.12.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
