--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unit-testing-react",
-  "version": "0.0.4",
-  "description": "",
+  "version": "0.0.5",
+  "description": "React common test components",
   "module": "dist/index.umd.js",
   "main": "dist/index.umd.js",
   "types": "dist/index.d.ts",
@@ -16,7 +16,8 @@
   },
   "keywords": [
     "react",
-    "testing"
+    "testing",
+    "component"
   ],
   "husky": {
     "hooks": {
