--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "unit-testing-react",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "React common test components",
   "module": "dist/index.umd.js",
   "main": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "git:style": "bash ./config/script/style.bat",
     "commitlint": "commitlint -e",
     "prepare": "husky install",
     "release": "npm version prerelease",
@@ -56,7 +55,6 @@
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "react-markdown": "^8.0.4",
-    "react-router-dom": "^6.4.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.1",
@@ -68,7 +66,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.4.2"
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
