chore: 0.3.0 添加新组组件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unit-testing-react",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "React common test components",
   "module": "dist/index.umd.js",
   "main": "dist/index.umd.js",
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "abandonjs": "^2.5.5",
+    "asura-eye": "^0.5.0",
     "babel-loader": "^8.2.5",
     "browser-helper-js": "^0.0.2",
     "check-it-type": "^0.4.2",
